pkg/tests/testthat/errors/mdl/nesting2.mdl
ident EQ1 X1 = sum(J = 3, 4 : J * sum(J = -2, -1 : J * Y ) );
